force-app/main/default/objects/BMCServiceDesk__CustomAttachment__c/BMCServiceDesk__CustomAttachment__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data details of attachments for URL or File types.</description>
    <label>CustomAttachment</label>
    <nameField>
        <displayFormat>Sequence{0000}</displayFormat>
        <label>CustomAttachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomAttachment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>