force-app/main/default/objects/BMCServiceDesk__CustomAttachment__c/fields/BMCServiceDesk__AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AttachmentId__c</fullName>
    <label>Attachment ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>