force-app/main/default/objects/BMCServiceDesk__CustomAttachment__c/fields/BMCServiceDesk__fileName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__fileName__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>