force-app/main/default/objects/BMCServiceDesk__CustomAttachment__c/fields/BMCServiceDesk__parentId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__parentId__c</fullName>
    <label>Parent ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>