force-app/main/default/objects/BMCServiceDesk__CustomAttachment__c/fields/BMCServiceDesk__parentName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__parentName__c</fullName>
    <label>Parent Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>