force-app/main/default/objects/BMCServiceDesk__CustomAttachment__c/fields/BMCServiceDesk__parentType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__parentType__c</fullName>
    <label>Parent Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>