force-app/main/default/objects/BMCServiceDesk__CustomAttachment__c/fields/BMCServiceDesk__type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>Url</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>